2008-02-06  Thomas Heller  <theller@python.net>

	* Added a workaround for the buggy _ctypes.COMError in Python 2.5
	and 2.51.

2007-12-19  Thomas Heller  <theller@python.net>

	* Bump version number to 0.4.2.

	* Special methods (__iter__ and so on) did not work on
	dispinterfaces, because the __map_case__ dictionary was not
	populated.

2007-11-23  Thomas Heller  <theller@python.net>

	* Released version comtypes 0.4.1.

	* Add a PumpEvents(timeout) function to comtypes.client.  This
	function calls the win32 CoWaitForMultipleHandles() function which
	will wait in a way compatible with all types of apartments;
	additionally this function can be interrupted with Control+C.

2007-11-21  Thomas Heller  <theller@python.net>

	* comtypes\__init__.py: Add docstrings to special methods.  Make
	named_property a data descriptor by providing a __set__ method
	(which will raise AttributeError when called).

2007-11-15  Thomas Heller  <theller@python.net>

	* comtypes\__init__.py: Fix bound_named_property.__setitem__ so
	that COM properties can be set that require zero or more than one
	arguments.

	* comtypes\__init__.py:  Restructure the code that extend the COM
	interface subclasses with __len__, __call__, __getitem__, and
	__iter__ methods.  This is done with the comtypes.partial module,
	and apparently had strange behaviour when the code is run under a
	debugger.

2007-11-07  Thomas Heller  <theller@python.net>

	* Changed version number to 0.4.1.

	* Add an post-install script that will (after confirmation) remove
	the comtypes\gen directory containing the generated modules.

2007-11-02  Thomas Heller  <theller@python.net>

	* Bump version number to 0.4.0.
	Released version 0.4.0.

	* In _wrap_coclass, attach a __clsid attribute to the returned
	object. This allows, for example, to find outgoing interfaces when
	a CoClass is returned from a COM method call.

2007-10-26  Thomas Heller  <theller@python.net>

	* Implemented property get, put, and putref with arguments